--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "gentelella": "^1.4.0",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
